--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             </nav>
 
             <!-- nav responsive -->
-            <nav class="navbar bg-body-tertiary fixed-top">
+            <nav class="navbar fixed-top" style="background-color: rgba(224,225,221,.6);">
                 <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"> <img src="multimedia/logo2-removebg-preview.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top logoMenu">Sertanejo Universitario
+                <a class="navbar-brand" href="index.html"> <img src="multimedia/logo2-removebg-preview.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-center logoMenu">Sertanejo Universitario
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel" style="background-color: rgba(224,225,221);">
                     <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Sertanejo Universitario</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
