--- a/paginas/artistas.html
+++ b/paginas/artistas.html
@@ -60,6 +60,42 @@
                 </li>
             </ul>
         </nav>
+
+        <!-- nav responsive -->
+        <nav class="navbar fixed-top" style="background-color: rgba(224,225,221,.6);">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html"> <img src="../multimedia/logo2-removebg-preview.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-center logoMenu">Sertanejo Universitario
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel" style="background-color: rgba(224,225,221);">
+                <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Sertanejo Universitario</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="conoce-mas.html">Conoce más</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="top10.html">Top 10</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="artistas.html">Artistas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>               
+                </ul>
+                </div>
+            </div>
+            </div>
+        </nav>
     </header>
 
     <main>
