correccion -conoce mas-

--- a/paginas/conoce-mas.html
+++ b/paginas/conoce-mas.html
@@ -108,7 +108,7 @@
 
     <section>
       <div class="historiaGrid">
-        <article class="raiz" data-aos="zoom-out-right">
+        <article class="raiz">
               <h2>Inícios: Sertanejo Raíz</h2>
               <div>
                 <img src="../multimedia/sertanejoRaiz.jpg" alt="Sertanejo Raiz" class="raizFoto">
@@ -123,7 +123,7 @@
               </div>
         </article>
 
-          <article class="sofrencia" data-aos="zoom-out-left">
+          <article class="sofrencia">
               <h2>Cambios: Sertanejo Sofrença y Universitario</h2>
               <div>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/wm2iBcrCSzQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="sofrenciaVideo"></iframe>
