--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
 
     <section class="destacadosGrid">
         <div class="destacadosTitulo"><h2>DESTACADOS</h2></div>
-        <div class="foto1">
-            <img src="" alt="">
-        </div>
+        <div class="foto1"></div>
         <div class="foto2"></div>
         <div class="foto3"></div>
         <div class="foto4"></div>
