--- a/paginas/conoce-mas.html
+++ b/paginas/conoce-mas.html
@@ -110,7 +110,7 @@
       <div class="historiaGrid">
         <article class="raiz">
               <h2>Inícios: Sertanejo Raíz</h2>
-              <div>
+              <div class="raizFlex">
                 <img src="../multimedia/sertanejoRaiz.jpg" alt="Sertanejo Raiz" class="raizFoto">
                 
                 <p>La <strong> música sertaneja </strong> (o sertanejo) es un estilo musical que tuvo sus orígenes en el interior del centro-sur rural de Brasil en la década de 1920.</p>
@@ -125,7 +125,7 @@
 
           <article class="sofrencia">
               <h2>Cambios: Sertanejo Sofrença y Universitario</h2>
-              <div>
+              <div class="sofrenciaFlex">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/wm2iBcrCSzQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="sofrenciaVideo"></iframe>
                 
                 <p>En la década de 1960 comienza una etapa de <strong>"Música Sertaneja Romántica"</strong>. El estilo musical sofrência se caracteriza por abordar <strong>temas más románticos, adoptando el piano en su instrumentación</strong>.</p>
@@ -133,7 +133,7 @@
                 <p>La mayoría de los intérpretes de la música sertaneja consisten en dúos conformados casi siempre por hermanos y por lo general actuando uno de ellos como vocalista. Los hombres han denominado este estilo musical tradicionalmente, sin embargo la cantante <strong>Paula Fernandes fue la primera cantante femenina</strong> en lograr un éxito nacional en el estilo.</p>
                 <p>El auge de las artistas del estilo universitario ocurrió de hecho con el éxito de la cantante Marília Mendonça, conocida como "Rainha da Sofrência" , que permitió la <strong>creación de letras desde la perspectiva femenina</strong> y con ello el crecimiento de otras cantantes como Maiara & Maraisa, Simone & Simaria y Naiara Azevedo.</p>
 
-                <img src="../multimedia/PatroasPortada.jpg" alt="Sertanejo SOfrencia" class="sofrenciaFoto">
+                <img src="../multimedia/PatroasPortada.jpg" alt="Sertanejo Sofrencia" class="sofrenciaFoto">
 
               </div>
           </article>
@@ -154,31 +154,31 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../multimedia/raizRef.png" class="d-block referentesFoto" alt="...">
+                    <img src="../multimedia/raizRef.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>.
                   <div class="carousel-item">
-                    <img src="../multimedia/raizRef2.png" class="d-block referentesFoto" alt="...">
+                    <img src="../multimedia/raizRef2.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/raizRef4.png" class="d-block referentesFoto" alt="...">
+                    <img src="../multimedia/raizRef4.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/raizRef5.png" class="d-block referentesFoto" alt="...">
+                    <img src="../multimedia/raizRef5.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/sofrenzaRef2.png" class="d-block referentesFoto" alt="...">
+                    <img src="../multimedia/sofrenzaRef2.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/sofrenzaRef3.png" class="d-block referentesFoto" alt="...">
+                    <img src="../multimedia/sofrenzaRef3.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/raizRef3.png" class="d-block referentesFoto" alt="...">
+                    <img src="../multimedia/raizRef3.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/sofrenzaRef4.png" class="d-block referentesFoto" alt="...">
+                    <img src="../multimedia/sofrenzaRef4.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/sofrenzaRef5.png" class="d-block referentesFoto" alt="...">
+                    <img src="../multimedia/sofrenzaRef5.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
