--- a/paginas/artistas.html
+++ b/paginas/artistas.html
@@ -18,6 +18,9 @@
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+    <!-- ANIMATE CSS -->
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
+
     <!-- CSS -->
     <link rel="stylesheet" href="../css/styles.css">
 
@@ -98,13 +101,16 @@
         </nav>
     </header>
 
+        <!-- FOTO PRINCIPAL -->
     <main>
         <div class="fotoPrincipalFondoArtistas">
-            <h1>Descubri a los artistas mas destacados </h1>
+            <h1 class="animate__animated animate__fadeIn">Descubri a los artistas más destacados </h1>
         </div>
 
     </main>
 
+    <!-- ARTISTAS -->
+    
     <section class="boxArtistas">
         <article class="boxArtistasIndividual" data-aos="zoom-in-up">
             <h2>Hugo e Guilherme</h2>
@@ -156,7 +162,7 @@
             <div class="boxFlex">
                 <img src="../multimedia/ArtistasMaiaraeMaraisa.png" alt="Maiara e Maraisa" class="boxArtistasFoto">
             
-                <p>Maiara e Maraísa es un dúo de sertanejo de <strong>cantantes , compositoras , multiinstrumentistas y empresarias brasileñas</strong> , formado por las hermanas gemelas Maiara Carla Henrique Pereira y Carla Maraísa Henrique Pereira. Maiara comenzó a estudiar derecho y música pero terminó solo música, ya que derecho se detuvo en el quinto período. Maraísa comenzó a estudiar relaciones internacionales y música, pero concluyó solo música, dejando relaciones internacionales en el quinto período. Comenzaron a cantar a la edad de cinco años, y en ese momento subieron al escenario por primera vez, durante el Festival da Canção. [ 1 ] En <strong>marzo de 2004, lanzaron un álbum titulado Geminis Totalmente Livre.</strong>
+                <p>Maiara e Maraísa es un dúo de sertanejo de <strong>cantantes , compositoras , multiinstrumentistas y empresarias brasileñas</strong> , formado por las hermanas gemelas Maiara Carla Henrique Pereira y Carla Maraísa Henrique Pereira. Maiara comenzó a estudiar derecho y música pero terminó solo música, ya que derecho se detuvo en el quinto período. Maraísa comenzó a estudiar relaciones internacionales y música, pero concluyó solo música, dejando relaciones internacionales en el quinto período. Comenzaron a cantar a la edad de cinco años, y en ese momento subieron al escenario por primera vez, durante el Festival da Canção. En <strong>marzo de 2004, lanzaron un álbum titulado Geminis Totalmente Livre.</strong>
                 <br>
                 Después de su lanzamiento, el dúo se hizo conocido como <strong>"As Patroas"</strong> y también por sus canciones como "10%", "Se Olha no Espelho", "No Dia do Seu Casamento" y "Medo Bobo", que están presentes en el álbum Ao Vivo em Goiânia (2016) y que llegó a lo más alto de las listas brasileñas . Luego vinieron con todo en el DVD "Live in Campo Grande" con canciones como: Bengala & Crochê, Sorte Que Cê Beija Bem, Come Que Larga Desse Trem, Combina Demais, entre otras 22 pistas. Seguido por el proyecto audiovisual Dvd "Reflexo" con los éxitos "Nem Tchum", "Não Abro Mão" y "Traí Sim", este último con la <strong>participación de Zé Neto y Cristiano.</strong> Luego hicieron un trabajo más íntimo, "Aqui em Casa", grabado en el patio trasero de la residencia, con "Aí eu Bebo". </p>
             </div>
@@ -202,12 +208,13 @@
   
         <div class="nosotros">
             <h5>Sobre nosotros:</h5>
-            <p>Nuestras raices brasileras nos volvieron unos apacionados por sus costumbres, su comida y especialmente, su musica.</p>
+            <p>Nuestras raices brasileras nos volvieron unos apacionados por sus costumbres, su comida y especialmente, <strong>su musica.</strong></p>
         </div>
   
         <div class="redes">
             <h5> Seguinos en:</h5>
-            <a href="https://www.instagram.com.ar/" >Instagram</a>
+            <a href="https://www.instagram.com/"> <img src="../multimedia/logoinsta2.png" alt="Logo" class="logoRedes"></a>
+          <a href="https://www.facebook.com/"> <img src="../multimedia/logofb2.png" alt="Logo" class="logoRedes"></a>
         </div>
   
         <div class="news">
