--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <!-- ANIMATE CSS -->
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
     
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
@@ -95,13 +98,15 @@
             </nav>
     </header>
     
+    <!-- FOTO PRINCIPAL -->
     <main>
         <div class="fotoPrincipalFondoInicio">
-            <h1> Bienvenidos al lugar donde van a conocer todo sobre el Sertanejo Universitario en su idioma</h1>
+            <h1 class="animate__animated animate__fadeIn"> Bienvenidos al lugar donde van a conocer todo sobre el Sertanejo Universitario en tu idioma</h1>
         </div>
     </main>
 
-    <section class="destacadosGrid">
+    <!-- DESTACADOS -->
+        <section class="destacadosGrid">
         <div class="destacadosTitulo"><h2>DESTACADOS</h2></div>
         <div class="foto1"></div>
         <div class="foto2"></div>
@@ -117,12 +122,13 @@
 
         <div class="nosotros">
             <h5>Sobre nosotros:</h5>
-            <p>Nuestras raices brasileras nos volvieron unos apacionados por sus costumbres, su comida y especialmente, su musica.</p>
+            <p>Nuestras raices brasileras nos volvieron unos apacionados por sus costumbres, su comida y especialmente, <strong>su musica.</strong></p>
         </div>
 
         <div class="redes">
             <h5> Seguinos en:</h5>
-            <a href="https://www.instagram.com.ar/" >Instagram</a>
+            <a href="https://www.instagram.com/"> <img src="multimedia/logoinsta2.png" alt="Logo" class="logoRedes"></a>
+            <a href="https://www.facebook.com/"> <img src="multimedia/logofb2.png" alt="Logo" class="logoRedes"></a>
         </div>
 
         <div class="news">
