--- a/paginas/conoce-mas.html
+++ b/paginas/conoce-mas.html
@@ -161,28 +161,28 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../multimedia/raizRef.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
+                    <img src="../multimedia/raizRef.jpg" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>.
                   <div class="carousel-item">
-                    <img src="../multimedia/raizRef2.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
+                    <img src="../multimedia/raizRef2.jpg" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/raizRef4.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
+                    <img src="../multimedia/raizRef4.jpg" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/raizRef5.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
+                    <img src="../multimedia/raizRef5.jpg" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/sofrenzaRef2.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
+                    <img src="../multimedia/sofrenzaRef2.jpg" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/sofrenzaRef3.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
+                    <img src="../multimedia/sofrenzaRef3.jpg" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/raizRef3.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
+                    <img src="../multimedia/raizRef3.jpg" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/sofrenzaRef4.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
+                    <img src="../multimedia/sofrenzaRef4.jpg" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
                     <img src="../multimedia/sofrenzaRef5.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
