--- a/paginas/conoce-mas.html
+++ b/paginas/conoce-mas.html
@@ -185,7 +185,7 @@
                     <img src="../multimedia/sofrenzaRef4.jpg" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/sofrenzaRef5.png" class="d-block referentesFoto" alt="Referentes Sertanejo">
+                    <img src="../multimedia/sofrenzaRef5.jpg" class="d-block referentesFoto" alt="Referentes Sertanejo">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
